# SG-t-SNE-Pi library source files
sgtsnepi_src = files(['sgtsne.cpp',
                      'sparsematrix.cpp',
                      'utils.cpp',
                      'gradient_descend.cpp',
                      'qq.cpp',
                      'nuconv.cpp',
                      'conv1dnopad_f.cpp',
                      'conv2dnopad_f.cpp',
                      'conv3dnopad_f.cpp',
                      'graph_rescaling.cpp',
                      'dataReloc.cpp',
                      'timers.cpp',
                      'pq.cpp'])

# SG-t-SNE-Pi library headers
install_headers('sgtsne.hpp')

# conventional t-SNE implementation source files
# tsnepi_src = files('tsnepi.cpp')

# demo source files
# demo_stochastic_matrix_src       = files('demo_stochastic_matrix.cpp')
# demo_perplexity_equalization_src = files('demo_perplexity_equalization.cpp')

# test source files
# test_modules_src = files('test_modules.cpp')

# Matlab interface files: [[src_file, dependencies]...]
# mex_src_all = [[files('sgtsnepi_mex.cpp'),           []],
#                [files('computegrad_mex.cpp'),        []],
#                [files('perplexityEqualize_mex.cpp'), [libs_dep_dict['flann'],
#                                                       libs_dep_dict['lz4']]]]
